Fix overflow

--- a/examples/style/widget-gallery.css
+++ b/examples/style/widget-gallery.css
@@ -31,6 +31,7 @@ div.column {
 
 image {
 	max-height: 6em;
+	flex: 1;
 }
 
 text-input {
